[metadata]
name = heat2arm
version = 1.0.0
summary = OpenStack Heat to Azure Resource Manager template conversion tool
description-file =
  README.rst
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
classifier =
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4

[files]
packages =
  heat2arm

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source

[entry_points]
console_scripts =
  heat2arm = heat2arm.main:main
